# oligula-automatizacoes

./: README.md  TO-DO.md  package.json  pnpm-lock.yaml
.github/workflows/: release-unstable.yml  release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: ClearableTextArea.tsx  KeyboardCombination.tsx  RecordButton.tsx  VariableSelect.tsx  index.ts
src/components/ClearableTextArea/: ClearableTextArea.tsx  index.ts
src/components/UpdateModal/: AvailableBody.tsx  FailureBody.tsx  UpdateModal.tsx  UpdatingBody.tsx
src/components/UpdateModal/Bodies/: AvailableBody.tsx  FailureBody.tsx  SuccessBody.tsx
src/components/UpdateModal/bodies/: index.ts
src/components/VariableSelect/: VariableSelect.tsx  index.ts
src/helpers/: handleCatchError.ts  index.ts  slugifyText.ts
src/layouts/Navbar/: Navbar.tsx  navbarItems.ts
src/pages/: index.ts
src/pages/AutomatorPage/: AutomatorPage.tsx  StepTypes.ts
src/pages/AutomatorPage/Automation/: Automation.tsx  AutomationSteps.tsx
src/pages/AutomatorPage/AutomationStore/: AutomationStore.tsx  LoadAutomation.tsx  SaveAutomation.tsx  StoredAutomation.ts  index.ts  parseStoredAutomation.ts
src/pages/HomePage/: HomePage.tsx
src/pages/InmetroSealGeneratorPage/: InmetroSealGeneratorPage.tsx
src/pages/NotFoundPage/: NotFoundPage.tsx
src/pages/SettingsPage/: SettingsPage.tsx
src/pages/SpreadsheetFormatterPage/: SpreadsheetFormatterPage.tsx
src/providers/: AutomationProvider.tsx  PreloadProvider.tsx  ReactRouterProvider.tsx
src/types/: Step.ts  Variables.ts
(+21 files in other folders)
