[package]
name = "oligula-automatizacoes"
version = "1.0.0"
description = "Desktop automation app made with React, TypeScript, Tauri & Rust"
authors = ["Nathan Murillo de Oliveira"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-all", "os-all", "updater", "notification-all", "window-all", "path-all", "shell-open"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "^0.4"
enigo = "0.2.1"
autopilot = "0.4.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
